# fastapi-template

./: .env  LICENSE  README.md  alembic.ini  pyproject.toml
migrations/: README  env.py
src/: admin.py  config.py  database.py  main.py  repository.py
src/app/: model.py
